--- a/SimTECH/SimTECH/Pages/Guide/Topics/Intro.razor
+++ b/SimTECH/SimTECH/Pages/Guide/Topics/Intro.razor
@@ -1,10 +1,22 @@
-﻿<MudText Typo="Typo.h6">Guide</MudText>
+﻿<MudText Typo="Typo.h6">FAQ</MudText>
 <MudDivider Class="my-1" />
 
 <MudText>
-    Congratulation, you found the guide!
+    Congratulation, you found the FAQ!
 </MudText>
 
 <MudText Color="Color.Warning">
     Guide is super duper incomplete. Surprising, isn't it?
 </MudText>
+
+<MudExpansionPanels>
+    <MudExpansionPanel Text="Placeholder">
+        <MudText>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</MudText>
+    </MudExpansionPanel>
+    <MudExpansionPanel Text="Why has father left me?">
+        <MudText>Look in the mirror and ask that question again.</MudText>
+    </MudExpansionPanel>
+    <MudExpansionPanel Text="I have broken my sim and now the season doesn't work anymore.">
+        <MudText>Sucks to be you.</MudText>
+    </MudExpansionPanel>
+</MudExpansionPanels>
