Last completed round is now tracked when devving

--- a/SimTECH/SimTECH/Pages/Entrants/Tracks/Dialogs/TrackEditor.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Tracks/Dialogs/TrackEditor.razor
@@ -86,7 +86,7 @@
     private void HandleLengthLapCalc(string strLength)
     {
         var convertedDouble = double.Parse(strLength);
-        expectedLapCount = $"Expected amount of laps: {NumberHelper.CalculateLapCount(raceLength, convertedDouble)}";
+        expectedLapCount = $"Expected amount of laps: {NumberHelper.LapCount(raceLength, convertedDouble)}";
     }
 
     private void Submit()
