--- a/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
@@ -133,7 +133,7 @@
                     <div class="d-flex flex-row">
                         <MudNumericField @bind-Value="Model.SafetyCarOdds"
                                          Min="0"
-                                         Label="Safety car odds" />
+                                         Label="Safety car odds after incident" />
                         <div class="inline-info-text-container">
                             <MudText Typo="Typo.body1">@(NumberHelper.Percentage(1, 1 + Model.SafetyCarOdds))%</MudText>
                         </div>
@@ -148,7 +148,7 @@
                     </div>
                     <MudNumericField @bind-Value="Model.SafetyCarGap"
                                      Min="1"
-                                     Label="Gap drivers safety car" />
+                                     Label="Gap between drivers during safety car" />
                     <MudNumericField @bind-Value="Model.DriverStatusPaceModifier"
                                      Min="0"
                                      Label="Main/support driver pace modifier" />
