--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -20,7 +20,7 @@
                                      Text="@($"{Model.Race.Track.Length}km")"
                                      SecondaryText="Length" />
                 <MudListItemExtended T="string"
-                                     Text="@($"{NumberHelper.CalculateLapCount(Model.Race.RaceLength, Model.Race.Track.Length)}")"
+                                     Text="@($"{NumberHelper.LapCount(Model.Race.RaceLength, Model.Race.Track.Length)}")"
                                      SecondaryText="Laps" />
                 <MudListItemExtended T="double"
                                      Text="@Model.Race.Track.AeroMod.ToString("F2")"
