--- a/SimTECH/SimTECH/Shared/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Shared/Components/SimProgressLinear.razor
@@ -57,7 +57,7 @@
 
     private string IndicatorText(int advanceNum)
     {
-        var lapNumber = NumberHelper.CalculateLapCount(advanceNum * CalculationDistance, TrackLength);
+        var lapNumber = NumberHelper.LapCount(advanceNum * CalculationDistance, TrackLength);
         return lapNumber.ToString();
     }
 }
