a few is just a few updated extensions

--- a/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
@@ -50,20 +50,29 @@
                     <MudDivider />
 
                     <MudStack Class="mt-2">
-                        <MudSwitchM3 @bind-Checked="Model.UsePenalty"
+                        <MudSwitchM3 @bind-Value="Model.UsePenalty"
+                                     T="bool"
                                      ThumbIcon="@Icons.Material.Filled.Done"
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
                                      Label="Penalties"
                                      Color="Color.Secondary" />
-                        <MudSwitchM3 @bind-Checked="Model.EnableFatality"
+                        <MudSwitchM3 @bind-Value="Model.EnableFatality"
+                                     T="bool"
                                      ThumbIcon="@Icons.Material.Filled.Done"
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
                                      Label="Fatalities"
                                      Color="Color.Secondary" />
-                        <MudSwitchM3 @bind-Checked="Model.AllowContracting"
+                        <MudSwitchM3 @bind-Value="Model.AllowContracting"
+                                     T="bool"
                                      ThumbIcon="@Icons.Material.Filled.Done"
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
                                      Label="Contracts"
+                                     Color="Color.Secondary" />
+                        <MudSwitchM3 @bind-Value="Model.AllowPersonalNumbers"
+                                     T="bool"
+                                     ThumbIcon="@Icons.Material.Filled.Done"
+                                     ThumbOffIcon="@Icons.Material.Filled.Close"
+                                     Label="Personal numbers"
                                      Color="Color.Secondary" />
                     </MudStack>
                 </MudItem>
