--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -33,6 +33,19 @@
     src: url('../fonts/Shoguns Clan.ttf') format('truetype');
 }
 
+/*
+    common
+    colours
+    buttons
+    text
+    tables
+    dialogs
+    season area
+    extensions mudblazor css vars
+    default blazor
+    special
+*/
+
 /* common */
 html, body {
     font-family: NovaRegular;
@@ -231,6 +244,11 @@ th {
     font-family: var(--mud-typography-subtitle2-family);
 }
 
+/* tables */
+.postrace-table-group-header {
+
+}
+
 /* dialogs */
 .additional-dialog-controls {
     margin-right: 15px;
@@ -244,7 +262,7 @@ th {
     width: 75px;
 }
 
-/* season page */
+/* season area */
 .result-cell {
     border: 0.5px solid black !important;
     color: black !important;
