--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
@@ -10,11 +10,12 @@
 
                     <div class="d-flex flex-row-reverse" style="width:30%">
                         <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Outlined">
-                            <MudTooltip Text="Standings" Placement="Placement.Top" Color="Color.Tertiary">
-                                <MudIconButton Icon="@Icons.Material.Filled.AutoGraph"
-                                               OnClick="GoToOverview" Class="btn-sm" />
-                            </MudTooltip>
-                            <ScreenshotIconButton TargetId="postrace-container" Class="btn-sm" />
+                            <MudButton StartIcon="@Icons.Material.Filled.AutoGraph"
+                                       IconSize="Size.Small"
+                                       OnClick="GoToOverview">
+                                Standings
+                            </MudButton>
+                            <ScreenshotIconButton TargetId="postrace-container" />
                         </MudButtonGroup>
                     </div>
                 </MudStack>
