--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -33,6 +33,7 @@
         </MudMenu>
 
         <MudIconButton Href="/guide" Icon="@Icons.Material.Filled.MenuBook" Color="Color.Dark" />
+        <ScreenshotIconButton TargetId="sim-page-content" Colour="Color.Primary" />
 
         <MudPopover Open="@isHelpOpen" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" Style="margin-right: 20px">
             @if (HelpContent != null)
@@ -58,7 +59,7 @@
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
-    <MudMainContent>
+    <MudMainContent id="sim-page-content">
         @Body
     </MudMainContent>
 </MudLayout>
