--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -38,7 +38,7 @@
         <MudPopover Open="@isHelpOpen" AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight" Style="margin-right: 20px">
             @if (HelpContent != null)
             {
-                <MudPaper Class="pa-2 dialog-shadow">
+                <MudPaper Class="pa-2 dialog-shadow" Style="min-width: 500px">
                     <DynamicComponent Type="@HelpContent" />
                 </MudPaper>
             }
