--- a/SimTECH/SimTECH/Pages/Entrants/Drivers/Dialogs/DriverDetailStat.razor
+++ b/SimTECH/SimTECH/Pages/Entrants/Drivers/Dialogs/DriverDetailStat.razor
@@ -1,4 +1,7 @@
-﻿<MudDialog>
+﻿@inject LeagueService _leagueService
+@inject ResultService _resultService
+
+<MudDialog>
     <TitleContent>
         <MudText Typo="Typo.h5">Detailed statistics for a driver</MudText>
     </TitleContent>
@@ -9,6 +12,9 @@
                 <MudStack Row="true" Justify="Justify.SpaceBetween" Class="mud-width-full">
                     <MudPaper>
                         <MudText>Hababab</MudText>
+                        <MudRadioGroup T="long" Value="@SelectedLeagueId" ValueChanged="OnChangeSelectedLeague">
+
+                        </MudRadioGroup>
                     </MudPaper>
                     <MudPaper>
                         <MudText Color="Color.Secondary">This area can optionally be used to further specify the detail data</MudText>
@@ -17,13 +23,13 @@
 
                 <MudText>Chosen is @(Driver.FullName)</MudText>
 
-                <ApexCharts.ApexChart @ref="positionChart"
+                <ApexCharts.ApexChart @ref="PositionChart"
                                       TItem="DataPoint"
                                       Title="Position results"
                                       Options="@positionOptions"
                                       Height="500">
                     <ApexCharts.ApexPointSeries TItem="DataPoint"
-                                                Items="@positionResult.DataPoints"
+                                                Items="@PositionData.DataPoints"
                                                 XValue="@(e => e.XData)"
                                                 YValue="@(e => e.YData)"
                                                 SeriesType="ApexCharts.SeriesType.Bar" />
@@ -37,17 +43,26 @@
     [CascadingParameter] protected MudDialogInstance? StatDialog { get; set; }
 
     [Parameter] public Driver Driver { get; set; }
-    [Parameter] public List<Result> DriverResults { get; set; }
 
-    private DataSet positionResult = new DataSet { Label = "Scored positions" };
+    private List<Result> DriverResults { get; set; }
 
-    ApexCharts.ApexChart<DataPoint>? positionChart;
+    private List<League> Leagues { get; set; } = new();
+
+    private DataSet PositionData = new DataSet { Label = "Scored positions" };
+
+    ApexCharts.ApexChart<DataPoint> PositionChart { get; set; }
+
     ApexCharts.ApexChartOptions<DataPoint> positionOptions = Globals.CreateDefaultChartOptions;
+
+    private long SelectedLeagueId { get; set; }
 
     bool loading = true;
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
+        DriverResults = await _resultService.GetAllResultsOfDriver(Driver.Id);
+        Leagues = await _leagueService.GetLeagues();
+
         CreatePositionChart();
 
         loading = false;
@@ -61,9 +76,22 @@
 
             for (int i = 1; i <= highestPositionScored; i++)
             {
-                positionResult.DataPoints.Add(
+                PositionData.DataPoints.Add(
                     new DataPoint($"P{i}", DriverResults.Count(e => e.Position == i)));
             }
         }
+    }
+
+    private async Task OnChangeSelectedLeague(long leagueId)
+    {
+        // TODO: logic to refresh position data to only show for a certain league
+        if (leagueId == default)
+            DriverResults = await _resultService.GetAllResultsOfDriver(Driver.Id);
+        else
+            DriverResults = await _resultService.GetAllDriverResultsForLeague(Driver.Id, leagueId);
+
+        CreatePositionChart();
+
+        await PositionChart.UpdateSeriesAsync();
     }
 }
